<resources>
    <string name="app_name">Nanodegree</string>

    <string name="hello_world">Hello world!</string>
    <string name="snail">O snail, Climb Mount Fuji!</string>
    <string name="action_settings">Settings</string>
    <string name="capstone_btn_text">Capstone: My own app</string>
    <string name="xyz_reader_btn_text">XYZ Reader</string>
    <string name="build_it_bigger_btn_text">Build It Bigger</string>
    <string name="super_duo_library_btn_text">Super Duo: Library</string>
    <string name="super_duo_football_scores_btn_text">Super Duo: Football scores</string>
    <string name="spotify_streamer_btn_text">Spotify Streamer</string>
</resources>
