<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffbfff7b"
    android:id="@+id/nanodegreelauncher">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/snail"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_streamer_btn_text"
        android:id="@+id/spotify_streamer"
        android:layout_below="@+id/textView"
        android:layout_marginTop="15dp"
        android:layout_alignEnd="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:background="#F08C35"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessageFromButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo_football_scores_btn_text"
        android:id="@+id/super_duo_football_scores"
        android:layout_below="@+id/spotify_streamer"
        android:layout_alignEnd="@+id/spotify_streamer"
        android:layout_alignStart="@+id/spotify_streamer"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessageFromButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/super_duo_library_btn_text"
        android:id="@+id/super_duo_library"
        android:layout_below="@+id/super_duo_football_scores"
        android:layout_alignStart="@+id/super_duo_football_scores"
        android:layout_alignEnd="@+id/super_duo_football_scores"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessageFromButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_btn_text"
        android:id="@+id/build_it_bigger"
        android:layout_below="@+id/super_duo_library"
        android:layout_alignStart="@+id/super_duo_library"
        android:layout_alignEnd="@+id/super_duo_library"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessageFromButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_btn_text"
        android:id="@+id/xyz_reader"
        android:layout_below="@+id/build_it_bigger"
        android:layout_alignStart="@+id/build_it_bigger"
        android:layout_alignEnd="@+id/build_it_bigger"
        android:background="#F08C35"
        android:layout_marginTop="15dp"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessageFromButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_btn_text"
        android:id="@+id/capstone"
        android:layout_below="@+id/xyz_reader"
        android:layout_alignEnd="@+id/xyz_reader"
        android:layout_alignStart="@+id/xyz_reader"
        android:layout_marginTop="15dp"
        android:background="#fff4a2ff"
        android:clickable="true"
        android:enabled="true"
        android:onClick="sendMessageFromButton" />

</RelativeLayout>
